--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,26 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql
+  encoding: utf8
+  reconnect: false
+  database: spotme_def
   pool: 5
   timeout: 5000
+  user: root
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: spotme_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: spotme_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: spotme_prod
